--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>HTML-CSS Work</title>
+    <style>body{margin-left: 2em;}li{margin-left: 2em;}</style>
 </head>
-<body style="margin-left: 2em;">
-    <h1>Home Page for Jackie and Cale</h1>
-    <li style="margin-left: 2em;"><a href="html-css/">HTML-CSS</a></li>
+<body>
+    <h1>HTML-CSS Labs and Assignments</h1>
+    <li><a href="wk06-lab-exercise-files/town_hall_3/index.html">Week 6 Lab</a></li>
+    <li><a href="wk06-assignment-exercise-files/town_hall_3/tickets.html">Week 6 Assignment</a></li>
+    <li><a href="wk07-assignment-exercise-files/town_hall_3/speakers/toobin.html">Week 7 Assignment</a></li>
 </body>
 </html>
