--- a/html-css/index.html
+++ b/html-css/index.html
@@ -10,5 +10,6 @@
     <h1>HTML-CSS Labs and Assignments</h1>
     <li><a href="wk06-lab-exercise-files/town_hall_3/index.html">Week 6 Lab</a></li>
     <li><a href="wk06-assignment-exercise-files/town_hall_3/tickets.html">Week 6 Assignment</a></li>
+    <li><a href="wk07-assignment-exercise-files/town_hall_3/speakers/toobin.html">Week 7 Assignment</a></li>
 </body>
 </html>
